--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@
 
 @layer components {
   .container {
-    @apply px-4 mx-auto max-w-7xl;
+    @apply px-4 md:px-6 mx-auto max-w-7xl w-full;
   }
 
   .btn {
